<resources>
    <string name="app_name">Calcly</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="addition">+</string>
    <string name="plusMinus">±</string>
    <string name="subtraction">−</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="equals">=</string>
    <string name="decimalPoint">.</string>
    <string name="percentage">%</string>
    <string name="allClear">AC</string>
    <string name="clear">C</string>
    <string name="homeDesc">Home</string>
    <string name="backspaceDesc">Backspace</string>
    <string name="switchDesc">Switch</string>
    <string name="length">Length</string>
    <string name="Mass">Mass</string>
    <string name="temperature">Temperature</string>
    <string name="currency">Currency</string>
    <string name="bmi">BMI</string>
    <string name="time">Time</string>
    <string name="male">MALE</string>
    <string name="height">HEIGHT</string>
    <string name="weight">WEIGHT</string>
    <string name="age">AGE</string>
    <string name="calculate_your_bmi">CALCULATE YOUR BMI</string>

    <string-array name="temperature_units_full">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
        <item>Rankine</item>
        <item>Réaumur</item>
    </string-array>

    <string-array name="mass_units_full">
        <item>Tonne</item>
        <item>Kilogram</item>
        <item>Gram</item>
        <item>Miligram</item>
        <item>Pound</item>
        <item>Ounce</item>
    </string-array>

    <string-array name="length_units_full">
        <item>Kilometer</item>
        <item>Meter</item>
        <item>Centimeter</item>
        <item>Milimeter</item>
        <item>Mile</item>
        <item>Yard</item>
        <item>Foot</item>
        <item>Inch</item>
    </string-array>

    <string-array name="time_units_full">
        <item>Year</item>
        <item>Week</item>
        <item>Day</item>
        <item>Hour</item>
        <item>Minute</item>
        <item>Second</item>
        <item>Millisecond</item>
    </string-array>

    <string-array name="currency_units_full">
        <item>USD - United States Dollar</item>
        <item>AUD - Australian Dollar</item>
        <item>BGN - Bulgarian Lev</item>
        <item>BRL - Brazilian Real</item>
        <item>CAD - Canadian Dollar</item>
        <item>CHF - Swiss Franc</item>
        <item>CNY - Chinese Yuan</item>
        <item>CZK - Czech Koruna</item>
        <item>DKK - Danish Krone</item>
        <item>EUR - Euro</item>
        <item>GBP - British Pound Sterling</item>
        <item>HKD - Hong Kong Dollar</item>
        <item>HUF - Hungarian Forint</item>
        <item>IDR - Indonesian Rupiah</item>
        <item>ILS - Israeli New Shekel</item>
        <item>INR - Indian Rupee</item>
        <item>ISK - Icelandic Krona</item>
        <item>JPY - Japanese Yen</item>
        <item>KRW - South Korean Won</item>
        <item>MXN - Mexican Peso</item>
        <item>MYR - Malaysian Ringgit</item>
        <item>NOK - Norwegian Krone</item>
        <item>NZD - New Zealand Dollar</item>
        <item>PHP - Philippine Peso</item>
        <item>PLN - Polish Zloty</item>
        <item>RON - Romanian Leu</item>
        <item>SEK - Swedish Krona</item>
        <item>SGD - Singapore Dollar</item>
        <item>THB - Thai Baht</item>
        <item>TRY - Turkish Lira</item>
        <item>ZAR - South African Rand</item>
    </string-array>


    <string-array name="temperature_units_abbr">
        <item>°C</item>
        <item>°F</item>
        <item>K</item>
        <item>°R</item>
        <item>°Re</item>
    </string-array>

    <string-array name="mass_units_abbr">
        <item>t</item>
        <item>Kg</item>
        <item>g</item>
        <item>Mg</item>
        <item>lb</item>
        <item>oz</item>
    </string-array>

    <string-array name="length_units_abbr">
        <item>Km</item>
        <item>m</item>
        <item>Cm</item>
        <item>mm</item>
        <item>mi</item>
        <item>yd</item>
        <item>ft</item>
        <item>in</item>
    </string-array>

    <string-array name="time_units_abbr">
        <item>y</item>
        <item>wk</item>
        <item>d</item>
        <item>mm</item>
        <item>h</item>
        <item>min</item>
        <item>s</item>
        <item>ms</item>
    </string-array>


</resources>
