<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LengthActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/background"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <!-- Custom Title TextView -->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/length"
            android:textSize="20sp"
            android:textColor="@color/textPrimary"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/lengthCalculation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <Spinner
                android:id="@+id/spinnerLength1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:entries="@array/length_units_full"
                android:spinnerMode="dropdown"/>

            <View
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/lengthValue1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:gravity="end"
                android:text="0"
                android:textSize="24sp"
                android:textColor="@color/operation"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <Spinner
                android:id="@+id/spinnerLength2"
                android:layout_width="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_height="wrap_content"
                android:entries="@array/length_units_full"
                android:spinnerMode="dropdown"/>

            <View
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/lengthValue2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:gravity="end"
                android:text=""
                android:textSize="24sp"
                android:textColor="@color/textPrimary"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true" />

        </LinearLayout>

    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/iconColor"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/buttonSeven"
                style="@style/calculatorButton"
                android:text="@string/seven" />

            <Button
                android:id="@+id/buttonEight"
                style="@style/calculatorButton"
                android:text="@string/eight" />

            <Button
                android:id="@+id/buttonNine"
                style="@style/calculatorButton"
                android:text="@string/nine" />

            <Button
                android:id="@+id/buttonAllClear"
                style="@style/operationButton"
                android:text="@string/allClear" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/buttonFour"
                style="@style/calculatorButton"
                android:text="@string/four" />

            <Button
                android:id="@+id/buttonFive"
                style="@style/calculatorButton"
                android:text="@string/five" />

            <Button
                android:id="@+id/buttonSix"
                style="@style/calculatorButton"
                android:text="@string/six" />

            <ImageButton
                android:id="@+id/backspace"
                style="@style/operationButton"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/backspaceDesc"
                android:src="@drawable/backspace"
                app:tint="@color/operation" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/buttonOne"
                style="@style/calculatorButton"
                android:text="@string/one" />

            <Button
                android:id="@+id/buttonTwo"
                style="@style/calculatorButton"
                android:text="@string/two" />

            <Button
                android:id="@+id/buttonThree"
                style="@style/calculatorButton"
                android:text="@string/three" />

            <Button
                style="@style/spacerButton"
                android:text="" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                style="@style/spacerButton"
                android:text="" />

            <Button
                android:id="@+id/buttonZero"
                style="@style/calculatorButton"
                android:text="@string/zero" />

            <Button
                android:id="@+id/buttonDecimal"
                style="@style/calculatorButton"
                android:text="@string/decimalPoint" />

            <Button
                style="@style/spacerButton"
                android:text="" />

        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>