<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:onClick="onThermoClick"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/thermoIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:contentDescription="@string/temperature"
                    android:src="@drawable/temp"
                    app:tint="@color/iconColor" />

                <TextView
                    android:id="@+id/thermoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temperature"
                    android:textColor="@color/iconColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:onClick="onWeightClick"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/weightIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:contentDescription="@string/Mass"
                    android:src="@drawable/weight"
                    app:tint="@color/iconColor" />

                <TextView
                    android:id="@+id/weightText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Mass"
                    android:textColor="@color/iconColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:onClick="onLengthClick"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/lengthIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:contentDescription="@string/length"
                    android:src="@drawable/ruler"
                    app:tint="@color/iconColor" />

                <TextView
                    android:id="@+id/lengthText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/length"
                    android:textColor="@color/iconColor" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:onClick="onCurrencyClick"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/currencyIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:contentDescription="@string/currency"
                    android:src="@drawable/currency"
                    app:tint="@color/iconColor" />

                <TextView
                    android:id="@+id/currencyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/currency"
                    android:textColor="@color/iconColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:onClick="onBmiClick"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/bmiIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:contentDescription="@string/bmi"
                    android:src="@drawable/scales"
                    app:tint="@color/iconColor" />

                <TextView
                    android:id="@+id/bmiText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bmi"
                    android:textColor="@color/iconColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:onClick="onTimeClick"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/timeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:contentDescription="@string/time"
                    android:src="@drawable/clock"
                    app:tint="@color/iconColor" />

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="@color/iconColor" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
